﻿============================== next release ==============================

  new data (thanks to Georgy Ermolaev, XPANCEO, Dubai, United Arab Emirates, for submitting data in YAML format!)
    main/WSe2/nk/Ushkov-o.yml
    main/WSe2/nk/Ushkov-e.yml
  new data  
    specs/cargille/index-matching liquids/nk/acrylic_double_matching_liquid.yml
  updated data
    specs/cargille/index-matching liquids/nk/BK7_matching_liquid.yml
    specs/cargille/index-matching liquids/nk/fused_silica_matching_liquid-06350.yml
    specs/cargille/index-matching liquids/nk/fused_silica_matching_liquid-50350.yml
    specs/cargille/index-matching liquids/nk/acrylic_matching_liquid.yml  
  re-arrangement
    'other/index-matching liquids/cargille/*' is now 'specs/cargille/index-matching liquids/*'
  new data (thanks to Pavel Dmitriev, for writing calculation scripts and submitting data in YAML format on GitHub!)
    main/DyScO3/nk/Chernova.yml (updated with data calculated from the model)
    main/LaAlO3/nk/Chernova.yml
    main/MgAl2O4/nk/Chernova.yml
    main/MgO/nk/Chernova.yml
    main/SrTiO3/nk/Chernova.yml
    other/doped crystals/Nb-SrTiO3/nk/Chernova.yml
    other/mixed crystals/LaAlO3-Sr2TaAlO6/nk/Chernova.yml


============================== 2025-02-23 ==============================

  Re-arrangement for cleaner database file structure:
    - Improved the integration logic between nk and n2 parts of the database.
    - Established a clear separation between research data and manufacturers' data.
    - Reformatted the "Info" section into YAML format, renamed it to about.yml, and placed it within the main database structure.
    - Removed "INFO" paths from catalogs; refer to the appropriate about.yml in the database structure when needed.
  new data
    main/CaF2/nk/Bosomworth-5K.yml
    main/CaF2/nk/Bosomworth-80K.yml
    main/CaF2/nk/Bosomworth-200K.yml
    main/CaF2/nk/Bosomworth-300K.yml
    main/SrF2/nk/Bosomworth-5K.yml
    main/SrF2/nk/Bosomworth-80K.yml